css/styles.css
:root {
    --primary-color: #2584ff;
    --secondary-color: #00d9ff;
    --accent-color: #ff3400;
    --headings-color: #1b0760;
    --body-color: #918ca4;
    --body-color-dark: #5c5577;
    --border-color: #ccc;
    --border-radius: 30px;

}

*,
*::after,
*::before {
    box-sizing: border-box;
}

/*  Typography  */
::selection {
    background: var(--primary-color);
    color: #fff;
}

html {
    font-size: 62.5%;

}

body {
    font-family: Inter, Arial, Helvetica, sans-serif;
    color: var(--body-color);
    font-size: 2.4rem;
    line-height: 1.5;
}

h1,
h2,
h3 {
    color: var(--headings-color);
    margin-bottom: 1rem;
    line-height: 1.1;

}

h1 {
    font-size: 7rem;
}

h2 {
    font-size: 4rem;
}

h3 {
    font-size: 3rem;
    font-weight: 500;
}

.block--dark h1,
.block--dark h2,
.block--dark h3 {
    color: #fff;
}

p {
    margin-top: 0;
}

@media screen and (min-width:1024px) {
    body {
        font-size: 1.8rem;
    }

    h1 {
        font-size: 8rem;
    }

    h2 {
        font-size: 4rem;
    }

    h3 {
        font-size: 2.4rem;
    }

}

/* Links  */
a {
    text-decoration: none;
}

.link-arrow {
    color: var(--accent-color);
    text-transform: uppercase;
    font-size: 2rem;
    font-weight: bold;
}

.link-arrow::after {
    content: '-->';
    margin-left: 5px;
    transition: all 0.2s ease;
    font-weight: 600;
}

.link-arrow:hover::after {
    margin-left: 10px;
}

@media screen and (min-width:1024px) {
    .link-arrow {
        font-size: 1.5rem;
    }
}

/* Badges */
.badge {
    border-radius: 20px;
    font-size: 2rem;
    font-weight: 600;
    padding: 0.5rem 2rem;
    white-space: nowrap;
}

.badge--small {
    font-size: 1.6rem;
    padding: 0.5rem 1.5rem;
}

.badge--primary {
    background-color: var(--primary-color);
    color: #fff;
}

.badge--secondary {
    background-color: var(--secondary-color);
    color: #fff;
}

.badge--accent {
    background-color: #ec3000;
}

@media screen and (min-width:1024px) {
    .badge {
        font-size: 1.5rem;
    }

    .badge--small {
        font-size: 1.2rem;
    }
}

/* Lists */
.list {
    list-style: none;
    padding: 0;
}

.list--inline .list__item {
    display: inline-block;
    margin-right: 2rem;
    color: var(--headings-color);
}

.list--tick {
    list-style-image: url('../images/tick.svg');
    padding-left: 3rem;
}

.list--tick .list__item {
    padding-left: 0.5rem;
    margin-bottom: 1rem;
}

@media screen and (min-width:1024px) {
    .list--tick .list__item {
        padding-left: 0;
    }
}

/* Icons */
.icon {
    width: 40px;
    height: 40px;
}

.icon--small {
    width: 30px;
    height: 30px;
}

.icon--primary {
    fill: var(--primary-color);
}

.icon--light {
    fill: #fff;
}

.icon-container {
    align-items: center;
    background-color: #f3f9fa;
    border-radius: 50%;
    display: inline-flex;
    width: 64px;
    height: 64px;
    justify-content: center;
}

.icon-container--accent {
    background-color: var(--accent-color);
}

/* Icons  */
.btn {
    border-radius: 40px;
    border: none;
    color: white;
    cursor: pointer;
    font-size: 1.8rem;
    font-weight: 600;
    margin: 1rem 0;
    outline: none;
    padding: 2rem 3rem;
    text-transform: uppercase;
    text-align: center;
    white-space: nowrap;

}

.btn .icon {
    width: 2rem;
    height: 2rem;
    margin-right: 0.5rem;
    vertical-align: middle;
}

.btn--primary {
    background-color: var(--primary-color);
}

.btn--primary:hover {
    background-color: #3a8ffd;
}

.btn--secondary {
    background-color: var(--secondary-color);
}

.btn--secondary:hover {
    background-color: #00c8eb;
}

.btn--accent {
    background-color: var(--accent-color);
}

.btn--accent:hover {
    background-color: #ec3000;
}

.btn--stretched {
    padding: 2rem 6rem;

}

.btn--block {
    width: 100%;
    display: inline-block;
}

.btn--outline {
    color: var(--headings-color);
    border: 2px solid var(--headings-color);
}

.btn--outline:hover {
    color: #fff;
    background: var(--headings-color);
}

@media screen and (min-width:1024px) {
    .btn {
        font-size: 1.5rem;
    }
}

/* Inputs */
.input {
    border-radius: var(--border-radius);
    border: 1px solid var(--border-color);
    color: var(--headings-color);
    font-size: 2rem;
    outline: none;
    padding: 1.5rem 3.5rem;
}

::placeholder {
    color: #cdcbd7;
}

.input-group {
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    display: flex;

}

.input-group .input {
    border: none;
    flex-grow: 1;
    padding: 1.5rem 2rem;
}

.input-group .btn {
    margin: 4px;
}

.input-group .icon {
    fill: red;
}

@media screen and (min-width:1024px) {
    .input {
        font-size: 1.5rem;
    }
}

/* Cards */
.card {
    border-radius: 7px;
    box-shadow: 0 0 20px 10px #f3f3f3;
    overflow: hidden;
}

.card__header,
.card__body {
    padding: 2rem 3rem;
}

.card--primary .card__header {
    background-color: var(--primary-color);
    color: #fff;
}

.card--secondary .card__header {
    background-color: var(--secondary-color);
    color: #fff;
}

.card--primary .badge--primary {
    background-color: #126de4;

}

.card--secondary .badge--secondary {
    background-color: #02cdf1;
}

.card--accent .card__header {
    background-color: var(--accent-color);
    color: #fff;
}



/* Plans */
.plan {
    transition: transform 0.2s ease-out;
}

.plan__name {
    color: #fff;
    margin: 0;
    font-weight: 500;
    font-size: 2.4rem;
}

.plan__price {
    font-size: 6rem;
}

.plan__billing-cycle {
    font-size: 2.4rem;
    font-weight: 300;
    opacity: 0.8;
    margin-right: 1rem;
}

.plan__description {
    font-size: 2rem;
    font-weight: 300;
    letter-spacing: 1px;
    display: block;
}

.plan .list__item {
    margin-bottom: 2rem;
}

.plan--popular {
    transform: scale(1.1);
}

.plan:hover {
    transform: scale(1.05);
}

.plan--popular:hover {
    transform: scale(1.15);
}
/* ... */

